// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageRenderer creates the defaut markup when success page is enabled 1`] = `
<div class="page">
  <div class="sheet fade tab-pane show" role="tabpanel">
    <div class="form-builder-layout">
      <h5 class="pagination"> Page 1 of 1 </h5>
      <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
        <h2 class="lfr-ddm-form-page-title">Untitled name</h2>
        <div class="row">
          <div class="col col-ddm col-empty col-md-12 last-col lfr-initial-col mt-5 mb-4" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0">
            <div class="ddm-empty-page ddm-target">
              <p class="ddm-empty-page-message">drag-fields-from-the-sidebar-to-compose-your-form</p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="ddm-paginated-builder-reorder" data-ddm-reorder-page-actions="0">
    <div class="tooltip fade clay-tooltip-top" role="tooltip">
      <div class="arrow"></div>
      <div class="tooltip-inner"></div>
    </div>
  </div>
  <div class="ddm-paginated-builder-dropdown" data-ddm-page-actions="0">
    <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
          <use xlink:href="icons.svg#ellipsis-v"></use>
        </svg></button></div>
  </div>
  <div class="add-page-button-container">
    <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">new-page</button>
    <div class="horizontal-line"></div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="reset-page" type="button">reset-page</button></li>
  </ul>
</div>
`;

exports[`PageRenderer creates the defaut markup with button to add success page if success page is disabled 1`] = `
<div class="page">
  <div class="sheet fade tab-pane show" role="tabpanel">
    <div class="form-builder-layout">
      <h5 class="pagination"> Page 1 of 1 </h5>
      <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
        <h2 class="lfr-ddm-form-page-title">Untitled name</h2>
        <div class="row">
          <div class="col col-ddm col-empty col-md-12 last-col lfr-initial-col mt-5 mb-4" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0">
            <div class="ddm-empty-page ddm-target">
              <p class="ddm-empty-page-message">drag-fields-from-the-sidebar-to-compose-your-form</p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="ddm-paginated-builder-reorder" data-ddm-reorder-page-actions="0">
    <div class="tooltip fade clay-tooltip-top" role="tooltip">
      <div class="arrow"></div>
      <div class="tooltip-inner"></div>
    </div><button class="btn reorder-page-button btn-sm btn-secondary" aria-label="angle-up" disabled="disabled" title="move-page-up" type="button"><svg class="lexicon-icon lexicon-icon-angle-up" focusable="false" role="presentation">
        <use xlink:href="icons.svg#angle-up"></use>
      </svg></button><button class="btn reorder-page-button btn-sm btn-secondary" aria-label="angle-down" disabled="disabled" title="move-page-down" type="button"><svg class="lexicon-icon lexicon-icon-angle-down" focusable="false" role="presentation">
        <use xlink:href="icons.svg#angle-down"></use>
      </svg></button>
  </div>
  <div class="ddm-paginated-builder-dropdown" data-ddm-page-actions="0">
    <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
          <use xlink:href="icons.svg#ellipsis-v"></use>
        </svg></button></div>
  </div>
  <div class="add-page-button-container">
    <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">new-page</button>
    <div class="horizontal-line"></div>
  </div>
  <div class="add-page-button-container">
    <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">add-success-page</button>
    <div class="horizontal-line"></div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="reset-page" type="button">reset-page</button></li>
  </ul>
</div>
`;

exports[`PageRenderer shows the new page button on the bottom of each page 1`] = `
<div class="page">
  <div class="sheet fade tab-pane show" role="tabpanel">
    <div class="form-builder-layout">
      <h5 class="pagination"> Page 1 of 1 </h5>
      <div class="active ddm-form-page lfr-ddm-form-page" data-ddm-page="0">
        <h2 class="lfr-ddm-form-page-title">Untitled name</h2>
        <div class="row">
          <div class="col col-ddm col-empty col-md-12 last-col lfr-initial-col mt-5 mb-4" data-ddm-field-column="0" data-ddm-field-page="0" data-ddm-field-row="0">
            <div class="ddm-empty-page ddm-target">
              <p class="ddm-empty-page-message">drag-fields-from-the-sidebar-to-compose-your-form</p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="ddm-paginated-builder-reorder" data-ddm-reorder-page-actions="0">
    <div class="tooltip fade clay-tooltip-top" role="tooltip">
      <div class="arrow"></div>
      <div class="tooltip-inner"></div>
    </div>
  </div>
  <div class="ddm-paginated-builder-dropdown" data-ddm-page-actions="0">
    <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
          <use xlink:href="icons.svg#ellipsis-v"></use>
        </svg></button></div>
  </div>
  <div class="add-page-button-container">
    <div class="horizontal-line"></div><button class="btn add-page-button btn-sm btn-secondary" type="button">new-page</button>
    <div class="horizontal-line"></div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="reset-page" type="button">reset-page</button></li>
  </ul>
</div>
`;
